🐛🏗 Externalize SoundCloud api
Fixes build error and bundle size

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<!-- <link rel="shortcut icon" href="<%= webpackConfig.output.publicPath %>icon.png"> -->
 		<title>mixrss</title>
+		<script type="text/javascript" src="https://connect.soundcloud.com/sdk/sdk-3.3.0.js"></script>
 	</head>
 	<body>
 		<div id="app"></div>
